logs/UnsafeAtomics_0.7.log
>>> 'Pkg.add("UnsafeAtomics")' log
[ Info: Installing UnsafeAtomics v0.0.1
[ Info: Package database updated
┌ Info: METADATA is out-of-date — you may not have the latest version of UnsafeAtomics
└ Use `Pkg.update()` to get the latest versions of your packages

>>> 'Pkg.test("UnsafeAtomics")' log
Julia Version 0.7.0-DEV.3421
Commit 2042dcfc2e (2018-01-16 23:39 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
      Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-135-generic #184-Ubuntu SMP Wed Oct 18 11:55:51 UTC 2017 x86_64 x86_64
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
              speed         user         nice          sys         idle          irq
       #1  3499 MHz    4456872 s        764 s     220662 s    1097358 s         47 s
       #2  3499 MHz     898643 s       5822 s      81232 s    5714805 s          0 s
       
  Memory: 2.93927001953125 GB (792.28515625 MB free)
  Uptime: 67996.0 sec
  Load Avg:  1.02783203125  1.001953125  0.96484375
  WORD_SIZE: 64
  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-8-openjdk-amd64
  HOME = /home/vagrant
Packages:
  Package Directory: /home/vagrant/.julia/v0.7
  Package Status:
2 required packages:
 - JSON                          0.16.4
 - UnsafeAtomics                 0.0.1
3 additional packages:
 - Compat                        0.46.0
 - Nullables                     0.0.3
 - tmpueiSOW                     0.0.0-             non-repo (unregistered)
[ Info: Testing UnsafeAtomics
WARNING: Base.Test is deprecated, run `using Test` instead.
  likely near /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl:3
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:46
└ @ Core UnsafeAtomics.jl:46
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:47
└ @ Core UnsafeAtomics.jl:47
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:49
└ @ Core UnsafeAtomics.jl:49
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_cas!{T <: AtomicTypes}(x::Array{T}, idx::Integer, cmp::T, new::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:122.
│ Use `unsafe_atomic_cas!(x::Array{T}, idx::Integer, cmp::T, new::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:122
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_xchg!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_xchg!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_add!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_add!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_sub!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_sub!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_and!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_and!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_nand!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_nand!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_or!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_or!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_xor!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_xor!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_max!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_max!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_min!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_min!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
ERROR: LoadError: error compiling test_threaded_loop_and_atomic_add: error compiling #8#threadsfor_fun: Failed to parse LLVM Assembly: 
julia: llvmcall:3:26: error: '%0' defined with type 'i64'
%rv = atomicrmw add i64* %0, i64 %1 acq_rel
                         ^

Stacktrace:
 [1] top-level scope
 [2] include at ./boot.jl:292 [inlined]
 [3] include_relative(::Module, ::String) at ./loading.jl:521
 [4] include(::Module, ::String) at ./sysimg.jl:26
 [5] process_options(::Base.JLOptions) at ./client.jl:324
 [6] _start() at ./client.jl:375
in expression starting at /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl:33
┌ Error: ------------------------------------------------------------
│ # Testing failed for UnsafeAtomics
│   exception =
│    failed process: Process(`/home/vagrant/julia/bin/julia -Cnative -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --code-coverage=none --color=no --compiled-modules=yes --check-bounds=yes --warn-overwrite=yes --startup-file=yes /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl`, ProcessExited(1)) [1]
│    Stacktrace:
│     [1] error(::String, ::Base.Process, ::String, ::Int64, ::String) at ./error.jl:42
│     [2] pipeline_error(::Base.Process) at ./process.jl:707
│     [3] run(::Cmd) at ./process.jl:669
│     [4] (::getfield(Base.Pkg.Entry, Symbol("##91#94")){Bool,String,Array{AbstractString,1}})() at ./pkg/entry.jl:730
│     [5] cd(::getfield(Base.Pkg.Entry, Symbol("##91#94")){Bool,String,Array{AbstractString,1}}, ::String) at ./file.jl:70
│     [6] #test!#90(::Bool, ::Function, ::String, ::Array{AbstractString,1}, ::Array{AbstractString,1}, ::Array{AbstractString,1}) at ./pkg/entry.jl:718
│     [7] (::getfield(Base.Pkg.Entry, Symbol("#kw##test!")))(::NamedTuple{(:coverage,),Tuple{Bool}}, ::typeof(Base.Pkg.Entry.test!), ::String, ::Array{AbstractString,1}, ::Array{AbstractString,1}, ::Array{AbstractString,1}) at ./<missing>:0
│     [8] #test#98(::Bool, ::Function, ::Array{AbstractString,1}) at ./pkg/entry.jl:757
│     [9] (::getfield(Base.Pkg.Entry, Symbol("#kw##test")))(::NamedTuple{(:coverage,),Tuple{Bool}}, ::typeof(Base.Pkg.Entry.test), ::Array{AbstractString,1}) at ./<missing>:0
│     [10] (::getfield(Base.Pkg.Dir, Symbol("##4#7")){Base.Iterators.IndexValue{Symbol,Bool,Tuple{Symbol},NamedTuple{(:coverage,),Tuple{Bool}}},typeof(Base.Pkg.Entry.test),Tuple{Array{AbstractString,1}}})() at ./pkg/dir.jl:36
│     [11] cd(::getfield(Base.Pkg.Dir, Symbol("##4#7")){Base.Iterators.IndexValue{Symbol,Bool,Tuple{Symbol},NamedTuple{(:coverage,),Tuple{Bool}}},typeof(Base.Pkg.Entry.test),Tuple{Array{AbstractString,1}}}, ::String) at ./file.jl:70
│     [12] #cd#1(::Base.Iterators.IndexValue{Symbol,Bool,Tuple{Symbol},NamedTuple{(:coverage,),Tuple{Bool}}}, ::Function, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N} where N) at ./pkg/dir.jl:36
│     [13] (::getfield(Base.Pkg.Dir, Symbol("#kw##cd")))(::NamedTuple{(:coverage,),Tuple{Bool}}, ::typeof(Base.Pkg.Dir.cd), ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N} where N) at ./<missing>:0
│     [14] #test#3(::Bool, ::Function, ::String, ::Vararg{String,N} where N) at ./pkg/pkg.jl:274
│     [15] test(::String, ::Vararg{String,N} where N) at ./pkg/pkg.jl:274
│     [16] top-level scope
│     [17] eval at ./boot.jl:295 [inlined]
│     [18] eval(::Module, ::Expr) at ./sysimg.jl:71
│     [19] process_options(::Base.JLOptions) at ./client.jl:301
│     [20] _start() at ./client.jl:375
└ @ Base.Pkg.Entry entry.jl:733
ERROR: UnsafeAtomics had test errors

>>> End of log
